--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -3,7 +3,7 @@
 <form action="/answer">
   <label class="fs-4 p-4" for="question">ask your coach</label>
   <div class="input-group p-4">
-  <input type="text"  name="question" placeholder="what time is it?">
-  <input class="btn btn-primary"type="submit" value="Ask!">
+  <input type="text"  name ="question" placeholder="what time is it?">
+  <input class="btn btn-primary"type="submit" value="Ask">
   </div>
 </form>
