--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,9 +1,9 @@
 <h1 class="p-4 mt-4">Stupid Coaching</h1>
 
-<form action="/answer">
-  <label class="fs-4 p-4" for="question">ask your coach</label>
+<form  action="/answer">
+  <label class="fs-4 p-4" for="question">ask your coach anything</label>
   <div class="input-group p-4">
-  <input type="text"  name ="question" placeholder="what time is it?">
+  <input type="text"  id="question" name ="question" >
   <input class="btn btn-primary"type="submit" value="Ask">
   </div>
 </form>
