--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,4 +1,4 @@
-<h1 class="p-4 mt-4">Stupid Coaching</h1>
+<h1 class="p-4 mt-4 fs-1">Stupid Coaching</h1>
 
 <form  action="/answer">
   <label class="fs-4 p-4" for="question">ask your coach anything</label>
